# Indie-studio

./: .desktop  CMakeLists.txt  ManageFile.hpp  Map.txt  README  Save1  a.out  hyper-sprint  main.cpp
Config/: 1.conf  2.conf  3.conf  4.conf  bindings.conf
IMAGES/MosEis/: mosesly14.3ds
Saves/: Save1.save  Save1.save~  endgame  leaderboard
assets/: Teemto-pod-2.FBX  TieBomber.b3d  TieBomber.mtl  TieDefender.b3d  TieDefender.mtl  TieFighter.b3d  TieInterceptor.mtl  TieInterceptor_Upload.blend.b3d  TiePhantom.b3d  TiePhantom.mtl  building_01.lwo  laser_border.mtl  stormtrooper.mtl
assets/Anakin_podracer/: Anakin's_PodRacer.mtl
assets/JAWA/: Star_wars_JAWA.3ds  Star_wars_JAWA.mtl
assets/NABOO/: NABOO-F.3ds  NABOO-F.mtl
assets/Sebulba-pod/: Map__118_Mix.tga  Map__124_Missing_TextureMap.tga  Map__28_Mix.tga  Map__38_RGB_Multiply.tga  Map__42_RGB_Multiply.tga  Map__47_RGB_Multiply.tga  Map__55_RGB_Multiply.tga  Map__75_RGB_Multiply.tga  Map__89_Checker.tga  Sebulba-pod.mtl
assets/Teemto-pod/: FRACTALR.TGA  Teemto-pod.mtl  bestcockpit.lwo  kabels.lwo
assets/asteroid/: asteroid.mtl  asteroid1.dae  asteroid2.dae  asteroid3.dae
assets/circuit/: circuit1.txt  circuit2.txt  newCircuit.txt
assets/font/: myfont.xml
assets/font/title/: myfont.xml
assets/font/title/title_italic/: myfont.xml
assets/njqur4o6ofsw-Anakin-podracer/: ReadMe.txt
assets/njqur4o6ofsw-Anakin-podracer/[.dae]/: doc.kml  textures.txt
assets/njqur4o6ofsw-Anakin-podracer/[.dae]/images/: Thumbs.db
assets/njqur4o6ofsw-Anakin-podracer/[.dae]/models/: PodRacer3.dae
assets/njqur4o6ofsw-Anakin-podracer/[.obj]/: Anakin's_PodRacer.mtl  Thumbs.db
doc/uml/: Game.mdj  Graphic.mdj
includes/: AI.hpp  AMenu.hpp  AObserver.hpp  Banana.hpp  Bind.hpp  BindingMenu.hpp  BoostSpeed.hpp  Button.hpp  Camera.hpp  Car.hpp  Chrono.hpp  Convert.hpp  Core.hpp  Element.hpp  EndGame.hpp  Error.hpp  EventReceiver.hpp  GButton.hpp  GameElement.hpp  Graphic.hpp  Leaderboard.hpp  MainMenu.hpp  ManageFile.hpp  ManageGame.hpp  ManageGame.hpp~  ManageMenu.hpp  Menu.hpp  Music.hpp  Observable.hpp  OptionMenu.hpp  PauseMenu.hpp  PlayMenu.hpp  Player.hpp  PlayerButton.hpp  PowerUp.hpp  SaveButton.hpp  Shoot.hpp  Utils.hpp  test.hpp
install/Linux/: Makefile  Racer.sh
sources/: BindingMenu.cpp  Chrono.cpp  Core.cpp  Element.cpp  Graphic.cpp  MainMenu.cpp  ManageFile.cpp  ManageFile.hpp  ManageGame.cpp  ManageMenu.cpp  Music.cpp  Observable.cpp  OptionMenu.cpp  main.cpp
sources/Core/: Chrono.cpp  Core.cpp  Error.cpp  Observable.cpp
sources/Game/: AI.cpp  Car.cpp  GameElement.cpp  ManageGame.cpp  Player.cpp
sources/Graphic/: Camera.cpp  Graphic.cpp
sources/Menu/: AMenu.cpp  BindingMenu.cpp  EndGame.cpp  Leaderboard.cpp  MainMenu.cpp  OptionMenu.cpp  PauseMenu.cpp  PlayMenu.cpp
