cmake_minimum_required(VERSION 3.5.1)
PROJECT(Racer)

SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
SET(CMAKE_CXX_FLAGS_DEBUG  "-g")
SET(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra -g3")
SET(CMAKE_CXX_STANDARD 11)

IF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Release)
ENDIF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)

IF(CMAKE_CXX_FLAGS_DEBUG)
  SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/debug)
ELSE(CMAKE_CXX_FLAGS_DEBUG)
  SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/release)
ENDIF(CMAKE_CXX_FLAGS_DEBUG)

INCLUDE_DIRECTORIES(
  "/usr/include/irrlicht"
  ${PROJECT_SOURCE_DIR}/includes
  )

FILE(GLOB SRCS sources/*.cpp)
FILE(GLOB SRCS_GAME sources/Game/*.cpp)
FILE(GLOB HDRS includes/*.hpp)

ADD_EXECUTABLE(Racer
  ${SRCS}
  ${SRCS_GAME}
  ${HDRS}
  )

TARGET_LINK_LIBRARIES(Racer
  "/usr/local/lib/libIrrlicht.so"
  )
